[fix] check cutoff time and current time accurately

--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -73,10 +73,12 @@ button:hover {
   position:absolute;
   text-align:center;
   z-index:0;
+  margin-bottom:300px;
 }
 
 .section-two-one {
-  padding-bottom:200px;
+  display:block;
+  padding-bottom:100px;
   position:relative;
   z-index:-1;
 }
@@ -747,10 +749,18 @@ a:visited{
   padding-right:20px;
   padding-left:20px;
   border-radius:99px;
-  border: 2px solid rgba(255,255,255,0.14);
+  border: 3px solid rgba(255,255,255,0.14);
 }
 
 .see-how:hover {
   background-color:transparent;
-  border: 2px solid rgba(255,255,255,1);
+  border: 3px solid rgba(255,255,255,1);
+}
+
+#how-it-works {
+  width:100%;
+  height:600;
+  background-color:#fff;
+  display:block;
+  padding-top:33px;
 }
